# inchi-identity-api

./: -  .gitignore  README.md  conda_env.yml  file1_smiles.txt  file2_smiles.txt  generate_uml.py  glucose_test.json  pyproject.toml  requirements.txt  test_salts_file1.mgf  test_salts_file2.mgf  test_smiles_file1.mgf  test_smiles_file2.mgf  unified_log.json  unified_log_smiles.json  unified_log_smiles_charges.json  unified_salts.mgf  unified_salts_log.json  unified_smiles.mgf  unified_smiles_charges.mgf
backend/: app.py
backend/cli/: cli.py
backend/configs/: default_config.json
backend/inchi/: cli.py  compare.py  config_loader.py  determine_levels_id.py  inchi_parser.py  lipid_analysis.py  main.py
backend/lipid/: lipid_analysis.py  lipid_structure_detector.py
backend/parsers/: mgf_parser.py
backend/routes/: inchi_comparison_routes.py
backend/tests/: test_extract_methods.py  test_identity.py  test_smarts.py
configs/: config.json  default_config.json
deploy/: inchi-identity-api.env.example
deploy/nginx/: inchi-identity-api.conf
deploy/systemd/: inchi-identity-api.service
files_examples/: result1.json  result2.json
frontend/: index.html
frontend/css/: mgf.css  style.css
frontend/js/: compare.js  files.js  mgf.js  mgf_files.js  scripts.js  ui.js  visualize.js
frontend/pages/: compare.html  files.html  mgf_files.html  mix_criteria.html  text_files.html
output/: results.json
src/api/: app.py
src/api/configs/: default_config.json
src/api/routes/: generation_3d_routes.py  inchi_comparison_routes.py
src/backend/: app.py
src/backend/cli/: cli.py
src/backend/configs/: default_config.json
src/backend/inchi/: compare.py  determine_levels_id.py  inchi_layers_enum.py  inchi_parser.py  smiles_pattern.py
src/backend/lipid/: lipid_analysis.py  (+4 more)
src/inchi/: cli.py  compare.py  determine_levels_id.py  inchi_layers_enum.py  inchi_parser.py  lipid_analysis.py
src/input/: input_inchi.py
tests/: test_api_smoke.py  test_extract_methods.py  test_identity.py  test_identity_smiles.py  test_smarts.py
(+5 files in other folders)
