[project]
name = "identity-levels-inchi"
version = "0.1.0"
description = "InChI identity comparison across multiple chemical abstraction levels"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "requests",
    "flask",
    "flask-cors",
    "python-dotenv",
    "pillow",
    "py3Dmol",
    "playwright",
    "selenium"
]

authors = [
    { name = "alejandraoshea", email = "alejandraosheafdez@gmail.com" }
]

[project.scripts]
inchi = "backend.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]