[project]
name = "inchi-identity-api"
version = "0.2.1"
description = "Flask REST API for the InChI Identity hierarchical molecular comparison framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alejandra O'Shea", email = "alejandraosheafdez@gmail.com" }
]

dependencies = [
    "numpy",
    "pandas",
    "requests",
    "openpyxl",
    "python-dotenv",
    "flask",
    "flask-cors",
    "pillow",
    "py3Dmol",
    "inchi-identity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]